--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,11 +7,21 @@ upstream api {
 }
 
 server {
-  listen 3000;
+  listen 80;
 
   location / {
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ /index.html;
+    proxy_pass http://client;
+  }
+
+  location /sockjs-node {
+    proxy_pass http://client;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+  }
+
+  location /api {
+    rewrite /api/(.*) /$1 break;
+    proxy_pass http://api;
   }
 }
